force-app/main/default/objects/SalesSurveyCustomerGoal__c/SalesSurveyCustomerGoal__c.object-meta.xml
<CustomObject>
    <description>Sales survey customer goals</description>
    <label>Sales Survey Customer Goal</label>
    <nameField>
        <label>Concept of Goal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesSurveyCustomerGoals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>