force-app/main/default/objects/SalesSurveyCustomerGoal__c/fields/Aligned_Solution__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Solution__c</fullName>
    <label>Aligned Solution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>