force-app/main/default/objects/SalesSurveyCustomerGoal__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>