force-app/main/default/objects/SalesSurveyCustomerGoal__c/fields/Sales_Survey__c.field-meta.xml
<CustomField>
    <fullName>Sales_Survey__c</fullName>
    <label>Sales Survey</label>
    <type>MasterDetail</type>
</CustomField>